# PlexAniBridge

./: .dockerignore  .env.example  .gitignore  .prettierrc  404.html  CNAME  Dockerfile  README.md  alembic.ini  compose.yaml  config.example.yaml  index.html  main.py  mappings.example.json  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: delete-untagged-packages.yml  docker-publish.yml  docs-publish.yml  openapi-sync.yml  tests.yml
advanced/custom-mappings/: index.html
alembic/: env.py  script.py.mako
alembic/versions/: 2024-12-21-11-56_6e710e6677c0.py  2025-01-15-15-52_b2ad27e14048.py  2025-02-04-01-57_424fe94c2c03.py  2025-02-15-02-10_ddbadb26481f.py  2025-02-17-14-29_c5581ec025a7.py  2025-02-17-20-24_6b471e97e780.py  2025-03-24-02-37_e89ead9178d7.py  2025-05-04-00-03_6fb5989efce6.py  2025-06-26-05-56_08f39c25b391.py  2025-07-27-02-22_086d9f69d7a3.py  2025-08-08-05-10_cd371e53adcb.py  2025-08-12-06-30_213f9be1534f.py  2025-09-19-00-29_8387b3fd8a6a.py  2025-09-30-04-03_12add4c4ffa9.py  2025-10-08-19-00_db24057a61c9.py  2025-10-20-10-41_90496c989bdd.py  2025-11-23-04-20_77574a748435.py  2025-11-23-14-49_9de097e7574e.py  2025-12-12-22-19_b2b38261fd7f.py  2025-12-17-08-03_a5d877d895e6.py  2025-12-17-08-18_5daf8f33a740.py
community/: index.html
configuration/: index.html
css/: htpasswd-generator.css
data/: config.example.yaml  mappings.example.json  mappings.example.yaml
docs/: .nav.yml  CNAME  community.md  compose.yaml  configuration.md  faq.md  index.md  pyproject.toml  requirements.txt
docs/advanced/: custom-mappings.md
docs/css/: htpasswd-generator.css
docs/js/: htpasswd-generator.js
docs/mappings/: custom-mappings.md  mappings-querying-language.md
docs/quick-start/: docker.md  source.md
docs/recovery/: disaster-recovery.md
docs/web/: api.md  backups.md  logs.md  mappings.md  openapi.json  screenshots.md  timeline.md
faq/: index.html
frontend/: .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  index.ts  utils.ts
frontend/src/lib/components/: booru-search.svelte  code-editor.svelte  hover-tooltip.svelte  json-code-block.svelte  pagination.svelte  toast-host.svelte  workaround.js
frontend/src/lib/types/: anilist.ts  api.ts
frontend/src/lib/ui/: booru-search.svelte  modal.svelte  (+3 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: manifest.webmanifest  sw.js
mappings/custom-mappings/: index.html
mappings/mappings-querying-language/: index.html
quick-start/docker/: index.html
quick-start/source/: index.html
recovery/disaster-recovery/: index.html
scripts/: __init__.py  anilist_restore.py  dev.py  docker_init.sh  export.py  openapi.py
search/: search_index.json
src/: __init__.py  database.py  exceptions.py  logging.py  settings.py
src/config/: __init__.py  database.py  settings.py
src/core/: __init__.py  anilist.py  animap.py  bridge.py  db.py  mappings.py  plex.py  providers.py  schduler.py  sched.py  scheduler.py
src/core/plexapi/: community.py  discover.py  metadata.py
src/core/providers/: __init__.py  library.py  list.py
src/core/sync/: __init__.py  base.py  movie.py  show.py  stats.py
src/models/: __init__.py  anilist.py  animap.py  failure.py  housekeeping.py  mapping.py  sync.py
src/models/db/: __init__.py  animap.py  base.py  housekeeping.py  pin.py  provenance.py  sync_history.py
src/models/schemas/: __init__.py  anilist.py  plex.py  provider.py
src/plex/: community.py  metadata.py
src/plexapi/: __init__.py  community.py  metadata.py
src/providers/: __init__.py  factory.py
src/providers/anilist/: __init__.py  client.py  list.py
src/providers/plex/: __init__.py  client.py  community.py  library.py
src/providers/plex_metadata/: __init__.py  client.py  library.py
src/stubs/plexapi/: base.pyi  library.pyi  media.pyi  myplex.pyi  server.pyi  settings.pyi  utils.pyi  video.pyi
src/utils/: booru_query.py  cache.py  git_version.py  header.py  htpasswd.py  logging.py  rate_limiter.py  rate_limitter.py  requests.py  sql.py  terminal.py  types.py  version.py
src/web/: __init__.py  app.py  dependencies.py  state.py
src/web/middlewares/: basic_auth.py  request_logging.py
src/web/routes/: __init__.py  dashboard.py  logs.py  mappings.py  profiles.py  system.py
src/web/services/: backup_service.py  configuration_service.py  history_service.py  logging_handler.py  mapping_overrides_service.py  mappings_query_spec.py  mappings_service.py  mappings_store.py  pin_service.py
src/web/templates/: about.html.jinja  base.html  base.html.jinja  dashboard.html.jinja  logs.html.jinja  mappings.html.jinja  profile_detail.html.jinja  settings.html.jinja  timeline.html.jinja
tests/: __init__.py  conftest.py  test_pyproject.py
tests/config/: test_settings.py
tests/core/: __init__.py  test_anilist.py  test_animap.py  test_mappings.py
tests/core/sync/: __init__.py  conftest.py  fakes.py  test_base_client.py  test_movie_client.py  test_show_client.py  test_stats.py
tests/utils/: test_booru_query.py  test_cache.py  test_logging.py  test_requests.py  test_sql.py  test_terminal.py  test_version.py
tests/web/: test_backup_service.py  test_basic_auth.py  test_configuration_service.py  test_history_service.py  test_logging_handler.py  test_mapping_overrides_service.py  test_mappings_service.py  test_mappings_service_filters.py  test_pin_service.py  test_request_logging_middleware.py  test_state.py
typings/plexapi/: __init__.py  base.pyi  library.pyi  media.pyi  myplex.pyi  server.pyi  video.pyi
web/: openapi.json
web/api/: index.html  redoc-72961060.html
web/backups/: index.html
web/logs/: index.html
web/mappings/: index.html
web/screenshots/: index.html
web/timeline/: index.html
(+70 files in other folders)
