[project]
name = "PlexAniBridge"
version = "1.8.0"
description = "The smart way to keep your AniList profile perfectly synchronized with your Plex library."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]
maintainers = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]

keywords = [
    "docker",
    "sync",
    "scrobble",
    "synchronization",
    "monitoring",
    "anime",
    "plex",
    "anilist",
    "plexpy",
    "plexanibridge",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiocache>=0.12.3",
    "aiohttp>=3.13.1",
    "alembic>=1.17.0",
    "async-lru>=2.0.5",
    "cachetools>=6.2.1",
    "colorama>=0.4.6",
    "fastapi[all]>=0.120.0",
    "limiter>=0.5.0",
    "plexapi>=4.17.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pyparsing>=3.2.5",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.5",
    "ruamel-yaml>=0.18.16",
    "sqlalchemy>=2.0.44",
    "tzlocal>=5.3.1",
]

[project.scripts]
pab-build = "scripts.dev:build"
pab-bump-version = "scripts.dev:bump_version"
pab-clean = "scripts.dev:clean"
pab-deps-install = "scripts.dev:deps_install"
pab-deps-upgrade = "scripts.dev:deps_upgrade"
pab-dev = "scripts.dev:dev"
pab-format = "scripts.dev:format"
pab-lint = "scripts.dev:lint"
pab-start = "scripts.dev:start"
pab-test = "scripts.dev:test"
pab-openapi = "scripts.openapi:main"

[project.urls]
Documentation = "https://plexanibridge.elias.eu.org"
Homepage = "https://plexanibridge.elias.eu.org"
Issues = "https://github.com/eliasbenb/PlexAniBridge/issues"
Source = "https://github.com/eliasbenb/PlexAniBridge"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pyright]
stubPath = "typings"
include = ["main.py", "src"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "DOC", "E", "F", "I", "RUF", "SIM", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.param_functions.Body",
    "fastapi.param_functions.Cookie",
    "fastapi.param_functions.Depends",
    "fastapi.param_functions.File",
    "fastapi.param_functions.Form",
    "fastapi.param_functions.Header",
    "fastapi.param_functions.Path",
    "fastapi.param_functions.Query",
    "fastapi.param_functions.Security",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src"

[tool.uv.workspace]
members = ["docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "py-spy>=0.4.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]
