[project]
name = "AniBridge"
version = "1.10.1"
description = "The smart way to keep your AniList profile perfectly synchronized with your Plex library."
readme = "README.md"
requires-python = "==3.14.*"
license = { text = "MIT" }

authors = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]
maintainers = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]

keywords = [
    "docker",
    "sync",
    "scrobble",
    "synchronization",
    "monitoring",
    "anime",
    "plex",
    "anilist",
    "plexpy",
    "anibridge",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anibridge-anilist-provider @ git+https://github.com/anibridge/anibridge-anilist-provider.git",
    "anibridge-list-interface @ git+https://github.com/anibridge/anibridge-list-interface.git",
    "anibridge-library-interface @ git+https://github.com/anibridge/anibridge-library-interface.git",
    "anibridge-plex-provider @ git+https://github.com/anibridge/anibridge-plex-provider.git",
    "aiocache>=0.12.3",
    "aiohttp>=3.13.2",
    "alembic>=1.17.1",
    "async-lru>=2.0.5",
    "cachetools>=6.2.1",
    "colorama>=0.4.6",
    "fastapi[all]>=0.121.1",
    "limiter>=0.5.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyparsing>=3.2.5",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "ruamel-yaml>=0.18.16",
    "sqlalchemy>=2.0.44",
    "bcrypt>=5.0.0",
]

[project.scripts]
ab-build = "scripts.dev:build"
ab-bump-version = "scripts.dev:bump_version"
ab-clean = "scripts.dev:clean"
ab-deps-install = "scripts.dev:deps_install"
ab-deps-upgrade = "scripts.dev:deps_upgrade"
ab-dev = "scripts.dev:dev"
ab-format = "scripts.dev:format"
ab-lint = "scripts.dev:lint"
ab-start = "scripts.dev:start"
ab-test = "scripts.dev:test"
ab-openapi = "scripts.openapi:main"
ab-docs-build = "scripts.dev:docs_build"
ab-docs-serve = "scripts.dev:docs_serve"

[project.urls]
Documentation = "https://anibridge.eliasbenb.dev"
Homepage = "https://anibridge.eliasbenb.dev"
Issues = "https://github.com/eliasbenb/PlexAniBridge/issues"
Source = "https://github.com/eliasbenb/PlexAniBridge"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = ["alembic"]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "DOC", "E", "F", "I", "RUF", "SIM", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.param_functions.Body",
    "fastapi.param_functions.Cookie",
    "fastapi.param_functions.Depends",
    "fastapi.param_functions.File",
    "fastapi.param_functions.Form",
    "fastapi.param_functions.Header",
    "fastapi.param_functions.Path",
    "fastapi.param_functions.Query",
    "fastapi.param_functions.Security",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src"
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated.*:DeprecationWarning:limiter.limiter",
    "ignore:'asyncio.iscoroutinefunction' is deprecated.*:DeprecationWarning:async_lru",
]

[tool.uv.workspace]
members = ["docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "py-spy>=0.4.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]
